debug and improve

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -10,7 +10,7 @@
                 <input type="submit" value="Login">
         </div>
 
-        <div class="signup-right">
+        <div class="signup-form">
             <form class="signup-form">
                 <label for="name">Name:</label>
                 <input type="text" id="sign-name" name="name">
@@ -21,8 +21,9 @@
                 <label for="password">Password:</label>
                 <input type="password" id="sign-password" name="password">
                 <br><br>
-                <input type="submit" value="Signup">
             </form>
+                <button id="sign-button" >Sign Up </button>
+
         </div>
     </div>
 
